--- a/playbooks/web_dev_site/templates/dev-ssl.conf.j2
+++ b/playbooks/web_dev_site/templates/dev-ssl.conf.j2
@@ -3,7 +3,7 @@
 	<VirtualHost _default_:443>
 		ServerAdmin {{ admin_email }}
 
-		DocumentRoot {{ default_site_path }}
+		DocumentRoot {{ dev_site_path }}
 
 		# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
 		# error, crit, alert, emerg.
@@ -11,8 +11,8 @@
 		# modules, e.g.
 		#LogLevel info ssl:warn
 
-		ErrorLog ${APACHE_LOG_DIR}/default-ssl-error.log
-		CustomLog ${APACHE_LOG_DIR}/default-ssl-access.log combined
+		ErrorLog ${APACHE_LOG_DIR}/dev-ssl-error.log
+		CustomLog ${APACHE_LOG_DIR}/dev-ssl-access.log combined
 
 		# For most configuration files from conf-available/, which are
 		# enabled or disabled at a global level, it is possible to
@@ -30,8 +30,8 @@
 		#   /usr/share/doc/apache2/README.Debian.gz for more info.
 		#   If both key and certificate are stored in the same file, only the
 		#   SSLCertificateFile directive is needed.
-		SSLCertificateFile	/etc/ssl/certs/ssl-cert-snakeoil.pem
-		SSLCertificateKeyFile /etc/ssl/private/ssl-cert-snakeoil.key
+		SSLCertificateFile	/etc/ssl/certs/ssl-cert-dev.pem
+		SSLCertificateKeyFile /etc/ssl/private/ssl-cert-dev.key
 
 		#   Server Certificate Chain:
 		#   Point SSLCertificateChainFile at a file containing the
