--- a/playbooks/web_dev_site/templates/dev.conf.j2
+++ b/playbooks/web_dev_site/templates/dev.conf.j2
@@ -7,10 +7,10 @@
 	# match this virtual host. For the default virtual host (this file) this
 	# value is not decisive as it is used as a last resort host regardless.
 	# However, you must set it for any further virtual host explicitly.
-	#ServerName www.example.com
+	ServerName {{ dev_server_name }}
 
 	ServerAdmin {{ admin_email }}
-	DocumentRoot {{ default_site_path }}
+	DocumentRoot {{ dev_site_path }}
 
 	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
 	# error, crit, alert, emerg.
@@ -18,8 +18,8 @@
 	# modules, e.g.
 	#LogLevel info ssl:warn
 
-	ErrorLog ${APACHE_LOG_DIR}/default-error.log
-	CustomLog ${APACHE_LOG_DIR}/default-access.log combined
+	ErrorLog ${APACHE_LOG_DIR}/dev-error.log
+	CustomLog ${APACHE_LOG_DIR}/dev-access.log combined
 
 	# For most configuration files from conf-available/, which are
 	# enabled or disabled at a global level, it is possible to
