--- a/playbooks/web_php/templates/testsite.conf.j2
+++ b/playbooks/web_php/templates/testsite.conf.j2
@@ -9,7 +9,7 @@
 	# However, you must set it for any further virtual host explicitly.
 	#ServerName www.example.com
 
-	ServerAdmin webmaster@localhost
+	ServerAdmin {{ admin_email }}
 	DocumentRoot {{ php_phptest_dir }}
 
 	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
