--- a/playbooks/web_dev_site/templates/dev-ssl.conf.j2
+++ b/playbooks/web_dev_site/templates/dev-ssl.conf.j2
@@ -30,8 +30,8 @@
 		#   /usr/share/doc/apache2/README.Debian.gz for more info.
 		#   If both key and certificate are stored in the same file, only the
 		#   SSLCertificateFile directive is needed.
-		SSLCertificateFile	/etc/ssl/certs/ssl-cert-dev.pem
-		SSLCertificateKeyFile /etc/ssl/private/ssl-cert-dev.key
+		SSLCertificateFile	{{ dev_cert_path }}
+		SSLCertificateKeyFile {{ dev_key_path }}
 
 		#   Server Certificate Chain:
 		#   Point SSLCertificateChainFile at a file containing the
