I now have more understanding of x.509 certificates and how Ansible handles them.

--- a/playbooks/web_dev_site/templates/dev-ssl.conf.j2
+++ b/playbooks/web_dev_site/templates/dev-ssl.conf.j2
@@ -1,6 +1,10 @@
 {{ ansible_managed | comment }}
 <IfModule mod_ssl.c>
 	<VirtualHost _default_:443>
+
+		ServerName {{ dev_server_name }}
+		# TODO ServerAliases www.gothick.org.uk mattgibsoncreative.co.uk etc. etc.
+
 		ServerAdmin {{ admin_email }}
 
 		DocumentRoot {{ dev_site_path }}
