Got Letsencrypt working with server aliases

--- a/playbooks/web_dev_site/templates/dev-ssl.conf.j2
+++ b/playbooks/web_dev_site/templates/dev-ssl.conf.j2
@@ -3,7 +3,10 @@
 	<VirtualHost _default_:443>
 
 		ServerName {{ dev_server_name }}
-		# TODO ServerAliases www.gothick.org.uk mattgibsoncreative.co.uk etc. etc.
+
+		{% if dev_server_aliases is defined %}
+		ServerAlias {{ dev_server_aliases | join(' ') }}
+		{% endif %}
 
 		ServerAdmin {{ admin_email }}
 
