--- a/playbooks/web_dev_site/templates/security.txt.j2
+++ b/playbooks/web_dev_site/templates/security.txt.j2
@@ -1,3 +1,4 @@
 Contact: {{ admin_email }}
 Acknowledgments: https://gothick.org.uk/security-hall-of-fame/
+Policy: https://gothick.org.uk/security-policy/
 Preferred-Languages: en
