Got nearly as far as enabling the server :)

--- a/playbooks/openvpn/templates/easy_rsa_vars.j2
+++ b/playbooks/openvpn/templates/easy_rsa_vars.j2
@@ -1,3 +1,4 @@
+{{ ansible_managed | comment }}
 # Easy-RSA 3 parameter settings
 
 # NOTE: If you installed Easy-RSA from your distro's package manager, don't edit
