More work on OpenVPN. Shaping up to look vaguely like our current live config, at least...

--- a/playbooks/openvpn/templates/server.conf.j2
+++ b/playbooks/openvpn/templates/server.conf.j2
@@ -313,3 +313,15 @@ verb 3
 
 # Notify the client that when the server restarts so it
 # can automatically reconnect.
+
+# Turn on ip forwarding, etc.
+up /etc/openvpn/server.up.sh
+
+# And back off again
+down /etc/openvpn/server.down.sh
+
+{% if push_routes %}
+{% for route in push_routes %}
+push "route {{ route }}"
+{% endfor %}
+{% endif %}
