--- a/playbooks/install_s3_restore_script/templates/grab_latest_backups_from_s3.sh.j2
+++ b/playbooks/install_s3_restore_script/templates/grab_latest_backups_from_s3.sh.j2
@@ -19,8 +19,9 @@ aws s3 cp "s3://gothick.org.uk-backup/backups-from-$1/" "{{ recovery_dir }}" --r
 echo "Copying www backup"
 aws s3 cp "s3://gothick.org.uk-backup/backups-from-$1/www-$1.tgz" "{{ recovery_dir }}/www.tgz" --sse
 
-echo "Copying docker backup"
-aws s3 cp "s3://gothick.org.uk-backup/backups-from-$1/docker-$1.tgz" "{{ recovery_dir }}/docker.tgz" --sse
+# We're not using Docker at the moment, but if we were, we'd restore it like this:
+# echo "Copying docker backup"
+# aws s3 cp "s3://gothick.org.uk-backup/backups-from-$1/docker-$1.tgz" "{{ recovery_dir }}/docker.tgz" --sse
 
 echo "Copying home backup"
 aws s3 cp "s3://gothick.org.uk-backup/backups-from-$1/home-$1.tgz" "{{ recovery_dir }}/home.tgz" --sse
