Remove misleading text from private area HTML page

--- a/playbooks/web_websites/templates/private-index.php.j2
+++ b/playbooks/web_websites/templates/private-index.php.j2
@@ -10,7 +10,10 @@
     </head>
     <body>
         <h1>Status Page</h1>
-        <p>Hi. This is the default website on gothick.org.uk.</p>
+        <p>Hi. This is the private area on gothick.org.uk. If you're not me,
+           you probably shouldn't be seeing this, as it's locked down by
+           various techniques.
+        </p>
         <p>Here's my php info:</p>
         <?php phpinfo(); ?>
     </body>
