--- a/playbooks/openvpn/templates/iptables.up.sh.j2
+++ b/playbooks/openvpn/templates/iptables.up.sh.j2
@@ -1,3 +1,4 @@
 {{ ansible_managed | comment }}
 # iptables NAT rules
-/sbin/iptables -t nat -A POSTROUTING -s 10.8.0.0/24 -o eth0 -j MASQUERADE
+# Note enX0 rather than eth0 for Ubuntu 24.04, apparently.
+/sbin/iptables -t nat -A POSTROUTING -s 10.8.0.0/24 -o enX0 -j MASQUERADE
