Prevent root ssh login

--- a/playbooks/secure_sshd/templates/10-kill-passwords.conf.j2
+++ b/playbooks/secure_sshd/templates/10-kill-passwords.conf.j2
@@ -2,3 +2,4 @@
 # Disable the password authentication that is so oddly sometimes
 # added by 50-cloud-init.
 PasswordAuthentication no
+PermitRootLogin no
