Add auto-reboot to unattended upgrades

--- a/playbooks/unattended_upgrades/templates/50unattended-upgrades.j2
+++ b/playbooks/unattended_upgrades/templates/50unattended-upgrades.j2
@@ -92,7 +92,7 @@ Unattended-Upgrade::MailReport "{{ unattended_upgrades_mail_report }}";
 
 // Automatically reboot *WITHOUT CONFIRMATION* if
 //  the file /var/run/reboot-required is found after the upgrade
-//Unattended-Upgrade::Automatic-Reboot "false";
+Unattended-Upgrade::Automatic-Reboot "{{ unattended_upgrades_automatic_reboot }}";
 
 // Automatically reboot even if there are users currently logged in
 // when Unattended-Upgrade::Automatic-Reboot is set to true
