--- a/playbooks/install_s3_backup_script/templates/s3_backup.sh.j2
+++ b/playbooks/install_s3_backup_script/templates/s3_backup.sh.j2
@@ -13,14 +13,14 @@
 
 # Filesystem
 nice tar --warning='no-file-ignored' -C / -cz var/www | \
-  aws s3 cp - s3://gothick.org.uk-backup/{{ destination }}/{{ www_backup_file}}.tgz
+  aws s3 cp --storage-class {{ s3_storage_class }} - s3://gothick.org.uk-backup/{{ destination }}/{{ www_backup_file}}.tgz
 
 # We're not using Docker at the moment, but if we were, we'd back it up like this:
 # nice tar -C / -cz var/docker | \
-#   aws s3 cp - s3://gothick.org.uk-backup/{{ destination }}/{{ docker_backup_file }}.tgz
+#   aws s3 cp --storage-class {{ s3_storage_class }} - s3://gothick.org.uk-backup/{{ destination }}/{{ docker_backup_file }}.tgz
 
 nice tar --warning='no-file-ignored' -C / -cz home | \
-  aws s3 cp - s3://gothick.org.uk-backup/{{ destination }}/{{ home_backup_file }}.tgz
+  aws s3 cp --storage-class {{ s3_storage_class }} - s3://gothick.org.uk-backup/{{ destination }}/{{ home_backup_file }}.tgz
 
 # Databases
 
@@ -28,15 +28,15 @@ nice tar --warning='no-file-ignored' -C / -cz home | \
 # https://stackoverflow.com/a/58967178/300836 tells you why I'm ignoring a couple of system tables
 nice mysqldump --all-databases --flush-privileges --ignore-table=mysql.innodb_table_stats \
   --ignore-table=mysql.innodb_index_stats | gzip -9 | \
-  aws s3 cp - s3://gothick.org.uk-backup/{{ destination }}/{{ mysql_backup_file }}.sql.gz
+  aws s3 cp --storage-class {{ s3_storage_class }} - s3://gothick.org.uk-backup/{{ destination }}/{{ mysql_backup_file }}.sql.gz
 
 # Individual databases, except for system databases
 candidates=$(echo "show databases" | mysql | grep -Ev "^(Database|mysql|performance_schema|information_schema)$")
 for candidate in $candidates; do
   nice mysqldump --flush-privileges --databases $candidate | gzip -9 | \
-    aws s3 cp - s3://gothick.org.uk-backup/{{ destination }}/db-$candidate.sql.gz
+    aws s3 cp --storage-class {{ s3_storage_class }} - s3://gothick.org.uk-backup/{{ destination }}/db-$candidate.sql.gz
 done
 
 # Users and privileges
 pt-show-grants | gzip -9 | \
-  aws s3 cp - s3://gothick.org.uk-backup/{{ destination }}/{{ mysql_users_file }}.sql.gz
+  aws s3 cp --storage-class {{ s3_storage_class }} - s3://gothick.org.uk-backup/{{ destination }}/{{ mysql_users_file }}.sql.gz
