--- a/playbooks/unattended_upgrades/templates/20auto-upgrades.j2
+++ b/playbooks/unattended_upgrades/templates/20auto-upgrades.j2
@@ -1,3 +1,3 @@
 {{ ansible_managed | comment('c') }}
 APT::Periodic::Update-Package-Lists "1";
-APT::Periodic::Unattended-Upgrade "1";
+APT::Periodic::Unattended-Upgrade "{{ unattended_upgrades_frequency_days }}";
