Change security.txt contact email

--- a/playbooks/web_websites/templates/security.txt.j2
+++ b/playbooks/web_websites/templates/security.txt.j2
@@ -1,4 +1,4 @@
-Contact: {{ admin_email }}
-Acknowledgments: https://gothick.org.uk/security-hall-of-fame/
+Contact: {{ security_email }}
 Policy: https://gothick.org.uk/security-policy/
 Preferred-Languages: en
+Acknowledgments: https://gothick.org.uk/security-hall-of-fame/
