Add helpful comment to security.txt

--- a/playbooks/web_websites/templates/security.txt.j2
+++ b/playbooks/web_websites/templates/security.txt.j2
@@ -1,3 +1,12 @@
+# Hi!
+#
+# Please note that while I do have a security hall of fame, this
+# website is run by me alone in my spare time and doesn't make any
+# profit. I therefore don't pay bounties, and may take a long time
+# to respond. Sorry!
+#
+# Matt
+#
 Contact: {{ security_email }}
 Policy: https://gothick.org.uk/security-policy/
 Preferred-Languages: en
