It helps if your /home backup actually backs up /home, rather than /var/www

--- a/playbooks/web_backups/templates/home-backup.dup.j2
+++ b/playbooks/web_backups/templates/home-backup.dup.j2
@@ -136,7 +136,7 @@ password = {{ web_backups_password }}
 ##    taken into account.
 
 ## files to include in the backup
-include = /var/www
+include = /home
 
 # files to exclude from the backup
 # exclude = /home/*/.gnupg
