--- a/playbooks/cloudwatch/templates/amazon-cloudwatch-agent.yaml.j2
+++ b/playbooks/cloudwatch/templates/amazon-cloudwatch-agent.yaml.j2
@@ -11,8 +11,8 @@ logs:
         files:
             collect_list:
                 -
-                    file_path: /var/log/message
-                    log_group_name: /var/log/message
+                    file_path: /var/log/syslog
+                    log_group_name: /var/log/syslog
                     log_stream_name: '{instance_id}'
 metrics:
     append_dimensions:
