Run Duplicitiy with ionice of 7 to see if we stop getting whining about our site being down when the backups are run

--- a/playbooks/web_backups/templates/duplicity-backup.dup.j2
+++ b/playbooks/web_backups/templates/duplicity-backup.dup.j2
@@ -31,7 +31,7 @@ nicelevel = 19
 ## See the ionice(1) man page for more details about available levels.
 ##
 ## Default:
-# ionicelevel =
+ionicelevel = 7
 
 ## test the connection? set to no to skip the test if the remote host is alive.
 ## if 'desturl' is set below, 'testconnect' must be set to 'no' for now.
